made payment success fail apper. changed payment buttons.

--- a/SendMe/Views/Shared/_PaymentPartial.cshtml
+++ b/SendMe/Views/Shared/_PaymentPartial.cshtml
@@ -19,7 +19,7 @@
      <div class="group">
          <label>
              <span>Name</span>
-             <input name="DonorName" id="DonorName" class="field" placeholder="Mic Anderson" type="text" maxlength="30" />
+             <input name="DonorName" id="DonorName" class="field" placeholder="John Smith" type="text" maxlength="30" />
          </label>
          <label>
              <span>Phone</span>
@@ -30,12 +30,10 @@
                  <label for="comment">Message:</label>
                  <textarea class="field" rows="5" id="comment" style="width:600px; border: 5px solid #DADEE0;"></textarea>
              </div>
-         </div>
-         <div class="container">
-             <div class="btn-group btn-group-lg" role="group">
-                 <button id="paymentBackBtn" type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="left" title="Go Back"><i class="glyphicon glyphicon-arrow-left"></i> Back</button>
-                 <button type="submit" class="btn btn-success" data-toggle="tooltip" data-placement="right" title="Submit Donation"><i class="glyphicon glyphicon-ok"></i> Submid Donation</button>
-             </div>
+         </div>     
+             <div class="btn-group" role="group">
+                 <button id="paymentBackBtn" type="button" class="btn btn-danger">Back</button>
+                 <button type="submit" class="btn btn-success">Submit Donation</button>
          </div>
      </div>
 </form>
