--- a/SendMe/Views/Shared/_CreateTrip.cshtml
+++ b/SendMe/Views/Shared/_CreateTrip.cshtml
@@ -10,69 +10,85 @@
     {
         @Html.AntiForgeryToken()
         <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
-                </div>
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
             </div>
+        </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Desc, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Desc, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Desc, "", new { @class = "text-danger" })
-                </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Desc, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Desc, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Desc, "", new { @class = "text-danger" })
             </div>
+        </div>
 
+        <div class="col-md-10">
+            <label>Destination</label>
             <div class="form-group">
-                @Html.LabelFor(model => model.Destination, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Destination, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Destination, "", new { @class = "text-danger" })
-                </div>
+                <select name="country" class="countries" id="countryId">
+                    <option value="">Select Country</option>
+                </select>
             </div>
-
+        </div>
+        <div class="col-md-10">
+            <br />
             <div class="form-group">
-                @Html.LabelFor(model => model.Dates, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Dates, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Dates, "", new { @class = "text-danger" })
-                </div>
+                <select name="state" class="states" id="stateId">
+                    <option value="">Select State</option>
+                </select>
             </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Deadline, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Deadline, new { htmlAttributes = new { @Value = ViewBag.DefaultDeadline, @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Deadline, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.TargetAmnt, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.TargetAmnt, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.TargetAmnt, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-4">
-                    <button type="submit" id="tripCreate" class="btn btn-toolbar btn-success">
-                        <span class="glyphicon glyphicon-check"></span>
-                    </button>
+        </div>
+                    <div class="col-md-10">
+                        <br />
+                        <div class="form-group">
+                            <select name="city" class="cities" id="cityId">
+                                <option value="">Select City</option>
+                            </select>
+                        </div>
                     </div>
-                <div class="col-md-4" style="padding-top: 25px;">
-                    @if (action == "Update")
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Dates, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Dates, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Dates, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Deadline, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Deadline, new { htmlAttributes = new { @Value = ViewBag.DefaultDeadline, @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Deadline, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.TargetAmnt, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.TargetAmnt, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.TargetAmnt, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-md-4">
+                                <button type="submit" id="tripCreate" class="btn btn-toolbar btn-success">
+                                    <span class="glyphicon glyphicon-check"></span>
+                                </button>
+                            </div>
+                            <div class="col-md-4" style="padding-top: 25px;">
+                                @if (action == "Update")
                     {
-                        <a href="@User.Identity.Name" class="btn btn-toolbar btn-danger">
-                            <span class="glyphicon glyphicon-ban-circle"></span>
-                        </a>
-                    }
-                </div>
-            </div>
+                                    <a href="@User.Identity.Name" class="btn btn-toolbar btn-danger">
+                                        <span class="glyphicon glyphicon-ban-circle"></span>
+                                    </a>
+                                }
+                            </div>
+                        </div>
     }
 }
