--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -120,9 +120,10 @@
 
                                                     var targetAmount = '@ViewBag.TargetAmount';
                                                     var currentTotal = '@ViewBag.CurrentTotal';
+                                                    var currentCountry = '@Model.ActiveTrip.Trip.DestinationCountry';
+                                                    var currentCity = '@Model.ActiveTrip.Trip.DestinationCity';
 
                                                 </script>
-
                                                 <div class="row">
                                                     <div class="col-sm-10">
                                                         <div class="container">
