Donation message now working. Added DonationMsg to donation Db model.

--- a/SendMe/Views/Shared/_PaymentPartial.cshtml
+++ b/SendMe/Views/Shared/_PaymentPartial.cshtml
@@ -33,7 +33,8 @@
         </label>
         <div class="container">
             <label for="comment">Add a personal message:</label>
-            <textarea class="field" rows="5" id="comment" style="width:100%; border: 5px solid #DADEE0;"></textarea>
+            
+            <textarea class="field" typeof="input" rows="5" id="donationMsg" style="width:100%; border: 5px solid #DADEE0;"></textarea>
 
             <div class="btn-group btn-group-sm" role="group">
                 <div class="col-lg-5 paymentBtn">
