Style Login. Redirect to profile on Login

--- a/SendMe/Content/Site.css
+++ b/SendMe/Content/Site.css
@@ -258,11 +258,11 @@ h1 {
 
 /*-----------------------------
 
-      About/Contact Page
+   About/Contact/Login Pages
 
 -----------------------------*/
 .about-content {
-    margin: 5% 60%;
+    margin: 5%;
     background-color: #fff;
     color: #1a5b55;
     padding: 5%;
@@ -300,6 +300,14 @@ form .about-content {
 
 .about-content input {
     border-radius: 5px;
+}
+
+#loginForm {
+    margin-left: 45%;
+}
+
+#loginForm .form-group {
+    margin-left: 5%;
 }
 
 /*-----------------------
